@@ -1,3 +1,7 @@
+2013-07-02  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #49397: No method name 'selectItemsTCA' in class tx_staticinfotables_div
+
 2013-06-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #49462: Class tx_staticinfotables_pi1 not always available
